--- a/config/V3-min2/config.jsonc
+++ b/config/V3-min2/config.jsonc
@@ -9,7 +9,7 @@
   "modules-left": [
     "custom/omarchy",
     "hyprland/workspaces",
-    "cava"
+    "custom/cava"
     //"mpris",
     //"hyprland/window"
   ],
@@ -28,8 +28,8 @@
     "custom/updatespacman",
     "network",
     "pulseaudio",
-    "cpu",
-    "battery"
+    "battery",
+    "cpu"
     // "temperature"
     // "clock"
   ],
@@ -205,39 +205,10 @@
       ]
     }
   },
-  "cava": {
-    // "cava_config": "/home/yourusername/.config/cava/config",
-    "framerate": 30,
-    "autosens": 0,
-    "sensitivity": 10,
-    "bars": 24,
-    "lower_cutoff_freq": 50,
-    "higher_cutoff_freq": 10000,
-    "sleep_timer": 2,
-    "hide_on_silence": true,
-    // "format_silent": "quiet",
-    "method": "pipewire",
-    "source": "auto",
-    "stereo": true,
-    "reverse": false,
-    "bar_delimiter": 0,
-    "monstercat": false,
-    "waves": false,
-    "noise_reduction": 0.25,
-    "input_delay": 2,
-    "format-icons": [
-      "▁",
-      "▂",
-      "▃",
-      "▄",
-      "▅",
-      "▆",
-      "▇",
-      "█"
-    ],
-    "actions": {
-      "on-click-right": "mode"
-    }
+  "custom/cava": {
+    //"cava_config": "~/.config/cava/config",
+    "format": "{}",
+    "exec": "~/.config/waybar/cava.sh"
   },
   "mpris": {
     "format": "{player_icon}",
