--- a/config/V3-min2/config.jsonc
+++ b/config/V3-min2/config.jsonc
@@ -27,8 +27,8 @@
     "custom/updatespacman",
     "network",
     "pulseaudio",
-    "battery",
-    "cpu"
+    "cpu",
+    "battery"
     // "temperature"
     // "clock"
   ],
