--- a/config/V4.3/config.jsonc
+++ b/config/V4.3/config.jsonc
@@ -179,7 +179,7 @@
     }
   },
   "bluetooth": {
-    "format": "",
+    "format": " ",
     "format-disabled": "󰂲",
     "format-off": "󰂲",
     "format-connected": "",
@@ -206,7 +206,7 @@
   },
   "memory": {
     "interval": 2,
-    "format": "{percentage}%  ",
+    "format": "{percentage}% ",
     "on-click": "omarchy-launch-or-focus-tui btop"
   },
   "pulseaudio": {
@@ -236,7 +236,7 @@
     ]
   },
   "custom/expand-icon": {
-    "format": "󱞨 ",
+    "format": "",
     "tooltip": false
   },
   "tray": {
