--- a/config/V2.2/config.jsonc
+++ b/config/V2.2/config.jsonc
@@ -115,7 +115,7 @@
   },
  "cpu": {
     "interval": 2,
-    "format": "󰍛 {usage}%",
+    "format": "{usage}% 󰍛",
     "on-click": "omarchy-launch-or-focus-tui btop"
   },
   "memory": {
