--- a/config/V2.2/config.jsonc
+++ b/config/V2.2/config.jsonc
@@ -263,7 +263,7 @@
     "spacing": 12
   },
   "mpris": {
-    "format": "{player_icon} {artist} - {title}",
+    "format": "{player_icon} {dynamic}",
     "format-paused": "<span color='grey'>{status_icon} {dynamic}</span>",
     "max-length": 50,
     "interval": 1,
