--- a/config/V4/config.jsonc
+++ b/config/V4/config.jsonc
@@ -24,8 +24,8 @@
     "bluetooth",
     "network",
     "pulseaudio",
-    "cpu",
     "memory",
+    "cpu",
     "battery"
   ],
   "hyprland/workspaces": {
@@ -71,8 +71,7 @@
       "(.*) - fish": "  [$1] ",
       "(.*Steam)...(.*)": "  $1 ",
       "(.*imv)...(.*).. (.*)": "  $2 ",
-      // "OBS *. - (.*) - com.obsproject.Studio": "  $1", // not yet functional
-      // "nvim (.*) - com.mitchellh.ghostty": "  $1", // not being captured
+      "(.*) - com.obsproject.Studio": "  $1 "
     }
   },
   "custom/omarchy": {
@@ -115,9 +114,9 @@
     "format": "󰍛 {usage}%",
     "on-click": "omarchy-launch-or-focus-tui btop"
   },
- "memory": {
+  "memory": {
     "interval": 2,
-    "format": "  {percentage}%",
+    "format": "{percentage}% ",
     "on-click": "omarchy-launch-or-focus-tui btop"
   },
   "clock": {
