--- a/config/V3-min/config.jsonc
+++ b/config/V3-min/config.jsonc
@@ -1,7 +1,6 @@
 {
   "exclusive": true,
   "reload_style_on_change": true,
-  "layer": "top",
   "position": "top",
   "spacing": 0,
   "height": 28,
@@ -11,24 +10,21 @@
     "custom/omarchy",
     "hyprland/workspaces",
     "mpris"
-   // "hyprland/window"
   ],
   "modules-center": [
-    //"mpris",
     "clock",
-    // "hyprland/workspaces",
     "idle_inhibitor",
     "custom/update",
     "custom/screenrecording-indicator"
   ],
   "modules-right": [
+    //"hyprland/window",
     "group/tray-expander",
     "custom/updatespacman",
     "network",
     "pulseaudio",
+    "cpu",
     "battery"
-   // "temperature"
-    // "clock"
   ],
  "hyprland/workspaces": {
     "format": "{icon}",
@@ -53,7 +49,7 @@
   }, 
   "hyprland/window": {
     "format": "{title} - {class}",
-    "max-length": 25,
+    "max-length": 55,
     "rewrite": {
       " - ": "", // if no window is focused, a single dash is displayed, this removes it
       "(.*?) - Chromium - chromium": "  $1 ",
@@ -70,10 +66,9 @@
       "(.*Discord)...(.*).. (.*)": "  $2 ",
       "(.*) - org.gnome.Nautilus": " 󰣆 $1 ",
       "(.*) - fish": "  [$1] ",
-      "(.*Steam)...(.*)": "  $1 ",
-      "(.*imv)...(.*).. (.*)": "  $2 ",
-      // "OBS *. - (.*) - com.obsproject.Studio": "  $1", // not yet functional
-      // "nvim (.*) - com.mitchellh.ghostty": "  $1", // not being captured
+      "(.*Steam)...(.*)": " $1",
+      "(.*imv)...(.*).. (.*)": " $2",
+      "(.*) - com.obsproject.Studio": "  $1 "
     }
   },
   "custom/omarchy": {
@@ -90,28 +85,17 @@
     "signal": 7,
     "interval": 3600
   },
-  "cpu": {
+ "cpu": {
     "interval": 2,
-    "format": "󰍛 {usage}%",
+    "format": "{usage}% 󰍛",
     "on-click": "omarchy-launch-or-focus-tui btop"
   },
-  "memory": {
-    "interval": 2,
-    "format": "  {percentage}%",
-    "on-click": "omarchy-launch-or-focus-tui btop"
-  },
-  "temperature": {
-    "interval": 2,
-    "critical-threshold": 85,
-    "format": " {temperatureC}°C",
-    "format-critical": " {temperatureC}°C"
-  },
-  "clock": {
+ "clock": {
     "format": "{:L%A: %H:%M}",
     "format-alt": "{:L%d %B W%V %Y}",
     "tooltip-format": "<span>{calendar}</span>",
     "calendar": {
-      "mode": "mouth",
+      "mode": "month",
       "mode-mon-col": 3,
       "on-click-right": "mode",
       "format": {
@@ -190,7 +174,7 @@
     "on-click": "omarchy-launch-bluetooth"
   },
   "pulseaudio": {
-    "format": "{icon} {volume}%",
+    "format": "{icon}",
     "on-click": "omarchy-launch-or-focus-tui wiremix",
     "on-click-right": "pamixer -t",
     "tooltip-format": "Playing at {volume}%",
@@ -205,19 +189,18 @@
     }
   },
   "mpris": {
-    "format": "{player_icon} {artist} - {title}",
-    "format-paused": "{status_icon}",
-    "tooltip-format": "{dynamic}",
+    "format": "{player_icon} {dynamic}",
+    "format-paused": "<span color='grey'>{status_icon} {dynamic}</span>",
+    "max-length": 30,
+    "interval": 1,
     "player-icons": {
-      "default": "",
-      "mpv": "",
-      "termusic": ""
+      "default": "⏸",
+      "mpv": "🎵"
     },
     "status-icons": {
-      "paused": ""
-    },
-    "on-click": "playerctl play-pause",
-     "max-length": 20
+      "paused": "▶"
+    }
+    // "ignored-players": ["firefox"]
   },
   "idle_inhibitor": {
     "format": "{icon}",
