--- a/config/V4.2/config.jsonc
+++ b/config/V4.2/config.jsonc
@@ -143,7 +143,7 @@
   },
   "cpu": {
     "interval": 2,
-    "format": "󰍛 {usage}%",
+    "format": "{usage}% 󰍛",
     "on-click": "omarchy-launch-or-focus-tui btop"
   },
   "clock": {
