--- a/config/V2.5/config.jsonc
+++ b/config/V2.5/config.jsonc
@@ -152,9 +152,8 @@
       ]
     },
     "format-full": "󰂅",
-    "tooltip-format-discharging": "{power:>1.0f}W↓ {capacity}%",
-    "tooltip-format-charging": "{power:>1.0f}W↑ {capacity}%",
-    "tooltip-format": "{timeTo}",
+    "tooltip-format-discharging": "{power:>1.0f}W↓ {capacity}% {timeTo}",
+    "tooltip-format-charging": "{power:>1.0f}W↑ {capacity}% {timeTo}",
     "interval": 5,
     "on-click": "omarchy-menu power",
     "states": {
