Fix clock format from '%H:%m' to '%H:%M'

--- a/config/V2.5/config.jsonc
+++ b/config/V2.5/config.jsonc
@@ -83,7 +83,7 @@
     ]
   },
   "clock": {
-    "format": "{:%H:%m}",
+    "format": "{:%H:%M}",
     "format-alt": "{:%A, %d %B %Y - %H:%m}",
     "tooltip-format": "<span>{calendar}</span>",
     "calendar": {
