--- a/config/V6.e/config.jsonc
+++ b/config/V6.e/config.jsonc
@@ -187,7 +187,7 @@
   },
     "pulseaudio#input": {
     "format-source": "",
-    "format-source-muted": "  off",
+    "format-source-muted": " ",
     "format": "{format_source}",
     "tooltip-format": "{format_source} {source_volume}%",
     "scroll-step": 1,
