--- a/config/V1.5/config.jsonc
+++ b/config/V1.5/config.jsonc
@@ -214,7 +214,8 @@
   },
   "backlight": {
     "device": "intel_backlight",
-    "format": "{percent}% {icon}",
+    "format": "{icon}",
+    "tooltip-format": "{percent}%",
     "format-icons": [
       "🌑",
       "🌘",
