--- a/config/v2/config.jsonc
+++ b/config/v2/config.jsonc
@@ -1,46 +1,39 @@
 {
-  
   "reload_style_on_change": true,
-  "exclusive": true,
+  "layer": "top",
   "position": "top",
-  "spacing": 0,
-  "height": 28,
-  "margin-top": 1,
-  "margin-right": 0,
-  "maring-left": 0,
-  "modules-left": ["custom/omarchy", "hyprland/workspaces", "hyprland/window", "cava", "mpris"],
-  "modules-center": ["clock", "custom/weather", "custom/screenrecording-indicator", "custom/update", "custom/updatespacman"],
+  "mod": "dock",
+  "margin-top": 0,
+  "height": 24,
+  "margin-left": 5,
+  "margin-right": 5,
+  "margin-bottom": 0,
+  "modules-left": [
+      "custom/omarchy",  
+      "clock",
+      "custom/weather",
+      "idle_inhibitor",
+      "hyprland/workspaces",
+      "custom/screenrecording-indicator",
+      "custom/updatespacman",
+      "custom/update",
+      "mpris"
+    ],
+  "modules-center": ["hyprland/window"],
   "modules-right": [
-    "group/tray-expander",
-    "temperature",
-    "network",
+    "tray",
+    "backlight",
+    "bluetooth",
     "pulseaudio",
-    "cpu",
+    "network",
     "memory",
-    "battery"
+    "battery",
+    "cpu"    
   ],
   "hyprland/workspaces": {
     "on-click": "activate",
-    "format": "{icon}",
-    "format-icons": {
-            "1": "1",
-            "2": "2",
-            "3": "3",
-            "4": "4",
-            "5": "5",
-            "6": "6",
-            "7": "7",
-            "8": "8",
-            "9": "9",
-            "10":"10"
-    },
-    "persistent-workspaces": {
-      "1": [],
-      "2": [],
-      "3": [],
-      "4": [],
-      "5": []
-    }
+    "disable-scroll": true,
+    "tooltip": false
   },
   "custom/omarchy": {
     "format": "<span font='omarchy'>\ue900</span>",
@@ -48,57 +41,83 @@
     "on-click-right": "xdg-terminal-exec",
     "tooltip-format": "Omarchy Menu\n\nSuper + Alt + Space"
   },
-  "hyprland/window": {
-	"format": "<span  weight='bold' >{class}</span>",
-  "max-length": 15,
-  "icon": true,
-	"icon-size": 14
-  },
   "custom/update": {
     "format": "",
     "exec": "omarchy-update-available",
     "on-click": "omarchy-launch-floating-terminal-with-presentation omarchy-update",
     "tooltip-format": "Omarchy update available",
     "signal": 7,
-    "interval": 3600
+    "interval": 21600
   },
-    "custom/updatespacman": {
-    "format": "{} {icon}",
+   "custom/updatespacman": {
+    "format": "{}{icon}",
     "return-type": "json",
     "format-icons": {
-        "has-updates": "󱍷",
-        "updated": "󰂪"
+      "has-updates": " 󰏖",
+      "updated": ""
     },
     "exec-if": "which waybar-module-pacman-updates",
-    "exec": "waybar-module-pacman-updates --interval-seconds 5 --network-interval-seconds 300"
+    "exec": "waybar-module-pacman-updates --no-zero-output"
   },
-  "cpu": {
+   "hyprland/window": {
+    "format": "{title} - {class}",
+    "max-length": 85,
+    "rewrite": {
+      " - ": "", // if no window is focused, a single dash is displayed, this removes it
+      "(.*?) - Chromium - chromium": "   $1 ",
+      "(.*chrome)...(.*)": "   $1 ",
+      "(.*) - Obsidian - .* - obsidian": "   $1 ",
+      "(.*nvim)...(.*)": "   $2 ",
+      "(.*code) - (.*)": " 󰨞  $1 ",
+      "^.*btop( .*|$)": " 󰧨 BTOP $1 ",
+      "^.*cmatrix( .*|$)": " 󰘨 MATRIX $1 ",
+      "(.*) - Spotify": "  $1 ",
+      "(.*) - com.mitchellh.ghostty": " 󰊠 $1 ",
+      "(.*) - Alacritty": "   $1 ",
+      "(.*) - BeeperTexts": " 󰻞  $1 ",
+      "(.*Discord)...(.*).. (.*)": "   $2 ",
+      "(.*) - org.gnome.Nautilus": " 󰣆  $1 ",
+      "(.*) - fish": "   [$1] ",
+      "(.*Steam)...(.*)": "   $1",
+      "(.*imv)...(.*).. (.*)": "   $2",
+      "(.*) - com.obsproject.Studio": "  $1 "
+    }
+  },
+ "cpu": {
     "interval": 2,
-    "format": " {usage}%",
+    "format": "{usage}% 󰍛",
+    "on-click": "omarchy-launch-or-focus-tui btop"
+  },
+  "memory": {
+    "interval": 2,
+    "format": "{percentage}%  ",
     "on-click": "omarchy-launch-or-focus-tui btop"
   },
   "clock": {
-    "format": "{:%A %H:%M}",
-    "format-alt": "{:%d %B W%V %Y}",
+    "format": " {:%H:%M %a}",
+    "format-alt": " {:%d/%m/%Y  %H:%M:%S}",
     "tooltip-format": "<span>{calendar}</span>",
     "calendar": {
-      "mode": "mounth",
+      "mode": "month",
+      "weeks-pos": "right",
       "mode-mon-col": 3,
       "on-click-right": "mode",
       "format": {
         "mouth": "<span color='#ffead3'><b>{}</b></span>",
         "weekdays": "<span color='#ffcc66'><b>{}</b></span>",
-        "today": "<span color='#ff6699'><b>{}</b></span>",
-      },
+        "today": "<span color='#ff6699'><b>{}</b></span>"
+      }
     },
     "on-click-right": "omarchy-launch-floating-terminal-with-presentation omarchy-tz-select"
   },
-    "memory": {
-    "interval": 2,
-    "format": " {percentage}%",
-    "on-click": "omarchy-launch-or-focus-tui btop"
+  "idle_inhibitor": {
+    "format": "{icon} ",
+    "format-icons": {
+      "activated": "󰛊",
+      "deactivated": "󰾫"
+    }
   },
-    "network": {
+  "network": {
     "format-icons": [
       "󰤯",
       "󰤟",
@@ -108,20 +127,20 @@
     ],
     "format": "{icon}",
     "format-wifi": "{icon}",
-    "format-ethernet": "󰈀",
-    "format-disconnected": "󰤮",
+    "format-ethernet": "󰀂",
+    "format-disconnected": "󰖪",
     "tooltip-format-wifi": "{essid} ({frequency} GHz)\n⇣{bandwidthDownBytes}  ⇡{bandwidthUpBytes}",
     "tooltip-format-ethernet": "⇣{bandwidthDownBytes}  ⇡{bandwidthUpBytes}",
     "tooltip-format-disconnected": "Disconnected",
     "interval": 3,
-    "spacing": 1,
-    "on-click": "omarchy-launch-wifi"
+    "nospacing": 1,
+    "on-click": "alacritty --class=Impala -e impala"
   },
   "battery": {
     "format": "{capacity}% {icon}",
     "format-discharging": "{capacity}% {icon}",
-    "format-charging": "{capacity}% {icon}",
-    "format-plugged": " {capacity}%",
+    "format-charging": "{icon}",
+    "format-plugged": "{power}",
     "format-icons": {
       "charging": [
         "󰢜",
@@ -148,11 +167,10 @@
         "󰁹"
       ]
     },
-    "format-full": "󰂅 {capacity}%",
+    "format-full": "󰂅",
     "tooltip-format-discharging": "{timeTo}",
     "tooltip-format-charging": "{timeTo}",
     "interval": 5,
-    "on-click": "omarchy-menu power",
     "states": {
       "warning": 20,
       "critical": 10
@@ -161,88 +179,59 @@
   "bluetooth": {
     "format": "",
     "format-disabled": "󰂲",
+    "format-off": "󰂲",
     "format-connected": "",
     "tooltip-format": "Devices connected: {num_connections}",
     "on-click": "omarchy-launch-bluetooth"
   },
+  "backlight": {
+    "device": "intel_backlight",
+    "format": "{icon}",
+    "tooltip-format": "{percent}%",
+    "format-icons": [
+      "🌑",
+      "🌘",
+      "🌗",
+      "🌖",
+      "🌕"
+    ]
+  },
+  "custom/weather": {
+        "format": "{}°",
+        "tooltip": true,
+        "interval": 1800,
+        "exec": "wttrbar --nerd --location yourlocation",
+        "return-type": "json"
+  },
   "pulseaudio": {
-    "format": "{volume}% {icon}",
-    "on-click": "alacritty --class=Wiremix -e wiremix",
-    "on-click-right": "omarchy-launch-or-focus-tui wiremix",
+    "format": "{icon}",
+    "on-click": "omarchy-launch-or-focus-tui wiremix",
+    "on-click-right": "pamixer -t",
     "tooltip-format": "Playing at {volume}%",
     "scroll-step": 5,
-    "format-muted": "󰝟",
+    "format-muted": "",
     "format-icons": {
-      "default": ["", "", ""]
+      "default": ["", "", " "]
     }
   },
-  "group/tray-expander": {
-    "orientation": "inherit",
-    "drawer": {
-      "transition-duration": 600,
-      "children-class":"tray-group-item"
-    },
-    "modules": ["custom/expand-icon", "tray", "bluetooth"]
-  },
-  "custom/expand-icon": {
-    "format": "",
-    "tooltip": false
-  },
   "tray": {
-    "icon-size": 12,
-    "spacing": 12
+   "spacing": 10
   },
-
   "mpris": {
-    "format": "{artist} - {title}",
-    //"format": "{player_icon} {artist} - {title}",
-    //"format-paused": "{status_icon} {artist} - {title}",
+    "format": "{player_icon} {dynamic}",
+    "format-paused": "<span color='grey'>{status_icon} {dynamic}</span>",
+    "max-length": 50,
+    "interval": 1,
     "player-icons": {
-      "default": "🎵",
+      "default": "⏸",
       "mpv": "🎵"
     },
     "status-icons": {
-      "paused": "⏸"
-    },
-    "max-length": 30
+      "paused": "▶"
+    }
+    // "ignored-players": ["firefox"]
   },
-  
-  "custom/weather": {
-    "format": "{}°",
-    "tooltip": true,
-    "interval": 60,
-    "exec": "wttrbar --nerd --location yourlocation",
-    "return-type": "json"
-  },
-
-"cava": {
-    "framerate": 120,
-    "autosens": 1,
-    "bars": 12,
-    "method": "pipewire",
-    "source": "auto",
-    "bar_delimiter": 0,
-    "input_delay": 2,
-    "sleep_timer": 2,
-    "hide_on_silence": true,
-    "format-icons" : ["▁", "▂", "▃", "▄", "▅", "▆", "▇", "█" ]
-  },
-
-"temperature": {
-        "thermal-zone": 2,
-        "format":"{temperatureC}°C ",
-        "critical-threshold": 70,
-        "format-critical": " {temperatureC}°C",
-        "format-icons": [
-          "", // Icon: temperature-empty
-          "", // Icon: temperature-quarter
-          "", // Icon: temperature-half
-          "", // Icon: temperature-three-quarters
-          ""  // Icon: temperature-full
-  ],
-    "tooltip": true
-  },
-    "custom/screenrecording-indicator": {
+  "custom/screenrecording-indicator": {
     "on-click": "omarchy-cmd-screenrecord",
     "exec": "$OMARCHY_PATH/default/waybar/indicators/screen-recording.sh",
     "signal": 8,
