--- a/config/v2/config.jsonc
+++ b/config/v2/config.jsonc
@@ -215,7 +215,8 @@
     }
   },
   "tray": {
-   "spacing": 10
+   "icon-size": 12,
+    "spacing": 10
   },
   "mpris": {
     "format": "{player_icon} {dynamic}",
