--- a/config/V5.c/config.jsonc
+++ b/config/V5.c/config.jsonc
@@ -1,33 +1,58 @@
 {
   "reload_style_on_change": true,
-  "layer": "top",
   "position": "top",
   "spacing": 0,
   "height": 15,
   "width": 1440,
   "margin": "0",
   "modules-left": [
-    "custom/omarchy",
-    "hyprland/workspaces",
-    "hyprland/window"
+     "group/left1",
+     "group/left2"
   ],
   "modules-center": [
+   "group/center1"
+  ],
+  "modules-right": [
+   "group/right1"
+  ],
+    "group/center1": {
+    "orientation": "inherit",
+    "modules": [
+   "mpris",
     "clock",
     "idle_inhibitor",
     "custom/update",
     "custom/screenrecording-indicator"
-  ],
-  "modules-right": [
-    "group/tray-expander",
+  ]
+  },
+    "group/right1": {
+    "orientation": "inherit",
+    "modules": [
+     "group/tray-expander",
     "backlight",
     "custom/updatespacman",
     "bluetooth",
     "network",
     "pulseaudio",
-    "cpu",
+    "power-profiles-daemon",
     "memory",
+    "cpu",
     "battery"
-  ],
+  ]
+  },
+      "group/left1": {
+    "orientation": "inherit",
+    "modules": [
+      "custom/omarchy",
+    "hyprland/workspaces"
+  ]
+  },
+    "group/left2": {
+    "orientation": "inherit",
+    "modules": [
+   "hyprland/window"
+  ]
+  },
   "hyprland/workspaces": {
     "on-click": "activate",
     "format": "{icon}",
@@ -72,8 +97,7 @@
       "(.*) - org.gnome.Nautilus": " 󰣆 $1 ",
       "(.*) - fish": "  [$1] ",
       "(.*Steam)...(.*)": "  $1",
-      // "OBS *. - (.*) - com.obsproject.Studio": "  $1", // not yet functional
-      // "nvim (.*) - com.mitchellh.ghostty": "  $1", // not being captured
+      "(.*) - com.obsproject.Studio": "  $1 "
     }
   },
   "custom/omarchy": {
@@ -81,6 +105,19 @@
     "on-click": "omarchy-menu",
     "on-click-right": "xdg-terminal-exec",
     "tooltip-format": "Omarchy Menu\n\nSuper + Alt + Space"
+  },
+  "mpris": {
+    "format": "󰋎",
+    "format-paused": "<span color='grey'>{status_icon}</span>",
+    "max-length": 20,
+    "player-icons": {
+      "default": "⏸",
+      "mpv": "🎵"
+    },
+    "status-icons": {
+      "paused": "▶"
+    }
+    // "ignored-players": ["firefox"]
   },
   "custom/update": {
     "format": "<span weight='bold' >\ue900</span>",
@@ -90,9 +127,10 @@
     "signal": 7,
     "interval": 3600
   },
-  "backlight": {
+   "backlight": {
     "device": "intel_backlight",
-    "format": "{percent}% {icon}",
+    "format": "{icon}",
+    "tooltip-format": "{percent}%",
     "format-icons": [
       "🌑",
       "🌘",
@@ -102,28 +140,39 @@
     ]
   },
   "custom/updatespacman": {
-    "format": "{icon}",
+    "format": "{}{icon}",
     "return-type": "json",
     "format-icons": {
-      "has-updates": "󰏖",
-      "updated": "󰂪"
+      "has-updates": " 󰏖",
+      "updated": ""
     },
     "exec-if": "which waybar-module-pacman-updates",
-    "exec": "waybar-module-pacman-updates --interval-seconds 5 --network-interval-seconds 300"
+    "exec": "waybar-module-pacman-updates --no-zero-output"
   },
-  "cpu": {
+  "power-profiles-daemon": {
+    "format": "{icon}",
+    "tooltip-format": "Power profile: {profile}\nDriver: {driver}",
+    "tooltip": true,
+    "format-icons": {
+      "default": "󰓅",
+      "performance": "󰓅",
+      "balanced": "󰾅",
+      "power-saver": "󰾆"
+    }
+  },
+   "cpu": {
     "interval": 2,
-    "format": "󰍛 {usage}%",
+    "format": " {usage}%",
     "on-click": "omarchy-launch-or-focus-tui btop"
   },
-  "memory": {
+    "memory": {
     "interval": 2,
-    "format": "  {percentage}%",
+    "format": " {percentage}%",
     "on-click": "omarchy-launch-or-focus-tui btop"
   },
   "clock": {
-    "format": "{:L%A %H:%M}",
-    "format-alt": "{:%A %d/%m/%Y}",
+    "format": "{:%H:%M}",
+    "format-alt": "{:%A, %d %B %Y - %H:%M}",
     "tooltip-format": "<span>{calendar}</span>",
     "calendar": {
       "mode": "mouth",
@@ -132,10 +181,10 @@
       "format": {
         "mouth": "<span color='#ffead3'><b>{}</b></span>",
         "weekdays": "<span color='#ffcc66'><b>{}</b></span>",
-        "today": "<span color='#ff6699'><b>{}</b></span>"
-      }
+        "today": "<span color='#ff6699'><b>{}</b></span>",
+      },
     },
-    "on-click-right": "~/.local/share/omarchy/bin/omarchy-cmd-tzupdate"
+    "on-click-right": "omarchy-launch-floating-terminal-with-presentation omarchy-tz-select"
   },
   "idle_inhibitor": {
     "format": "{icon}",
@@ -154,7 +203,7 @@
     ],
     "format": "{icon}",
     "format-wifi": "{icon}",
-    "format-ethernet": "󰀂",
+    "format-ethernet": "󰈀",
     "format-disconnected": "󰤮",
     "tooltip-format-wifi": "{essid} ({frequency} GHz)\n⇣{bandwidthDownBytes}  ⇡{bandwidthUpBytes}",
     "tooltip-format-ethernet": "⇣{bandwidthDownBytes}  ⇡{bandwidthUpBytes}",
@@ -164,10 +213,10 @@
     "on-click": "omarchy-launch-wifi"
   },
   "battery": {
-    "format": "{icon} {capacity}%",
-    "format-discharging": "{icon} {capacity}%",
-    "format-charging": "{icon} {capacity}%",
-    "format-plugged": "",
+    "format": "{capacity}% {icon}",
+    "format-discharging": "{capacity}% {icon}",
+    "format-charging": "{capacity}% {icon}",
+    "format-plugged": " {capacity}%",
     "format-icons": {
       "charging": [
         "󰢜",
@@ -194,9 +243,9 @@
         "󰁹"
       ]
     },
-    "format-full": "󰂅",
-    "tooltip-format-discharging": "{power:>1.0f}W↓ {capacity}%",
-    "tooltip-format-charging": "{power:>1.0f}W↑ {capacity}%",
+    "format-full": "󰂅 {capacity}%",
+    "tooltip-format-discharging": "{power:>1.0f}W↓ {timeTo}",
+    "tooltip-format-charging": "{power:>1.0f}W↑ {timeTo}",
     "interval": 5,
     "on-click": "omarchy-menu power",
     "states": {
