--- a/config/V4.2/config.jsonc
+++ b/config/V4.2/config.jsonc
@@ -148,7 +148,7 @@
     "on-click": "omarchy-launch-or-focus-tui btop"
   },
   "clock": {
-    "format": "{:L%A: %H:%M}",
+    "format": "{:L%A %H:%M}",
     "format-alt": "{:L%d %B W%V %Y}",
     "tooltip-format": "<span>{calendar}</span>",
     "calendar": {
