--- a/config/V2.4/config.jsonc
+++ b/config/V2.4/config.jsonc
@@ -1,10 +1,9 @@
 {
   "reload_style_on_change": true,
-  "layer": "top",
   "position": "top",
   "mod": "dock",
-  "margin-top": 1,
-  "height": 27,
+  "margin-top": 0,
+  "height": 15,
   "margin-left": 5,
   "margin-right": 5,
   "margin-bottom": 2,
@@ -14,6 +13,8 @@
     "orientation": "inherit",
     "modules": [
       "custom/omarchy",
+      "clock",
+      "custom/weather",
       "idle_inhibitor",
       "custom/screenrecording-indicator",
       "custom/updatespacman",
@@ -22,25 +23,26 @@
   },
 "group/left2": {
     "orientation": "inherit",
-    "modules": ["hyprland/workspaces"]
+    "modules": ["hyprland/window"]
   },
   "group/left3": {
     "orientation": "inherit",
     "modules": ["mpris"]
   },
   "modules-left": ["group/left1", "group/left2", "group/left3"],
-  "modules-center": ["hyprland/window"],
+  "modules-center": ["hyprland/workspaces"],
   "modules-right": [
     "group/tray-expander",
     "backlight",
     "bluetooth",
-    "pulseaudio",
+    "pulseaudio#output",
+    "pulseaudio#input",
+    "power-profiles-daemon",
     "network",
     "memory",
     "cpu",
-    "battery",
-    "custom/weather",
-    "clock"
+    "battery"
+    
   ],
   "hyprland/workspaces": {
     "on-click": "activate",
@@ -66,7 +68,7 @@
     }
   },
   "custom/omarchy": {
-    "format": "",
+    "format": "",
     "on-click": "omarchy-menu",
     "on-click-right": "xdg-terminal-exec",
     "tooltip-format": "Omarchy Menu\n\nSuper + Alt + Space"
@@ -83,7 +85,7 @@
     "format": "{}{icon}",
     "return-type": "json",
     "format-icons": {
-      "has-updates": " 󰏖",
+      "has-updates": "󰏖 ",
       "updated": ""
     },
     "exec-if": "which waybar-module-pacman-updates",
@@ -115,17 +117,17 @@
   },
  "cpu": {
     "interval": 2,
-    "format": "{usage}% 󰍛",
+    "format": " {usage}%",
     "on-click": "omarchy-launch-or-focus-tui btop"
   },
-  "memory": {
+    "memory": {
     "interval": 2,
-    "format": "{percentage}%  ",
+    "format": " {percentage}%",
     "on-click": "omarchy-launch-or-focus-tui btop"
   },
   "clock": {
-    "format": " {:%H:%M %a}",
-    "format-alt": " {:%d/%m/%Y  %H:%M:%S}",
+    "format": "{:%H:%M}",
+    "format-alt": "{:%A, %d %B %Y - %H:%M}",
     "tooltip-format": "<span>{calendar}</span>",
     "calendar": {
       "mode": "month",
@@ -143,8 +145,19 @@
   "idle_inhibitor": {
     "format": "{icon}",
     "format-icons": {
-      "activated": " ",
-      "deactivated": " "
+      "activated": "󰛊 ",
+      "deactivated": "󰾫 "
+    }
+  },
+    "power-profiles-daemon": {
+    "format": "{icon}",
+    "tooltip-format": "Power profile: {profile}\nDriver: {driver}",
+    "tooltip": true,
+    "format-icons": {
+      "default": "󰓅",
+      "performance": "󰓅",
+      "balanced": "󰾅",
+      "power-saver": "󰾆"
     }
   },
   "network": {
@@ -157,14 +170,14 @@
     ],
     "format": "{icon}",
     "format-wifi": "{icon}",
-    "format-ethernet": "󰀂",
-    "format-disconnected": "󰖪",
+    "format-ethernet": "󰈀",
+    "format-disconnected": "󰤮",
     "tooltip-format-wifi": "{essid} ({frequency} GHz)\n⇣{bandwidthDownBytes}  ⇡{bandwidthUpBytes}",
     "tooltip-format-ethernet": "⇣{bandwidthDownBytes}  ⇡{bandwidthUpBytes}",
     "tooltip-format-disconnected": "Disconnected",
     "interval": 3,
-    "nospacing": 1,
-    "on-click": "alacritty --class=Impala -e impala"
+    "spacing": 1,
+    "on-click": "omarchy-launch-wifi"
   },
   "battery": {
     "format": "{capacity}% {icon}",
@@ -208,10 +221,10 @@
     }
   },
   "bluetooth": {
-    "format": "",
+    "format": "󰂯",
     "format-disabled": "󰂲",
     "format-off": "󰂲",
-    "format-connected": "",
+    "format-connected": "󰂱",
     "tooltip-format": "Devices connected: {num_connections}",
     "on-click": "omarchy-launch-bluetooth"
   },
@@ -234,17 +247,33 @@
         "exec": "wttrbar --nerd --location yourlocation",
         "return-type": "json"
   },
-  "pulseaudio": {
-    "format": "{icon}",
+
+  "pulseaudio#input": {
+    "format-source": "",
+    "format-source-muted": " ",
+    "format": "{format_source}",
+    "tooltip-format": "{format_source} {source_volume}%",
+    "scroll-step": 1,
+    "smooth-scrolling-threshold": 1,
+    "max-volume": 100,
     "on-click": "omarchy-launch-or-focus-tui wiremix",
     "on-click-right": "pamixer -t",
-    "tooltip-format": "Playing at {volume}%",
-    "scroll-step": 5,
-    "format-muted": "",
+    "on-scroll-up": "pactl set-source-volume @DEFAULT_SOURCE@ +1%",
+    "on-scroll-down": "pactl set-source-volume @DEFAULT_SOURCE@ -1%",
+},
+"pulseaudio#output": {
+    "format": "{icon}",
+    "tooltip-format": "{icon}  {volume}%",
+    "format-muted": " off",
     "format-icons": {
-      "default": ["", "", ""]
-    }
-  },
+        "default": [""]
+    },
+    "max-volume": 100,
+    "scroll-step": 2,
+    "smooth-scrolling-threshold": 1,
+    "on-click": "omarchy-launch-or-focus-tui wiremix",
+    "on-click-right": "pamixer -t"
+},
  "group/tray-expander": {
     "orientation": "inherit",
     "drawer": {
@@ -265,7 +294,7 @@
     "spacing": 12
   },
   "mpris": {
-    "format": "{player_icon} {dynamic}",
+    "format": "{player_icon} {artist}-{title}",
     "format-paused": "<span color='grey'>{status_icon} {dynamic}</span>",
     "max-length": 50,
     "interval": 1,
