--- a/config/V5-solo/config.jsonc
+++ b/config/V5-solo/config.jsonc
@@ -3,7 +3,8 @@
   "position": "top",
   "spacing": 0,
   "height": 15,
-  "width": 1440,
+  "margin-left": 0,
+  "margin-right": 0,
   "margin": "0",
   "modules-left": [
     "custom/omarchy",
