--- a/config/V3-border/config.jsonc
+++ b/config/V3-border/config.jsonc
@@ -107,7 +107,8 @@
   },
   "backlight": {
     "device": "intel_backlight",
-    "format": "{percent}% {icon}",
+    "format": "{icon}",
+    "tooltip-format": "{percent}%",
     "format-icons": [
       "🌑",
       "🌘",
