--- a/config/V2.8/config.jsonc
+++ b/config/V2.8/config.jsonc
@@ -154,7 +154,7 @@
     "format": "{capacity}% {icon}",
     "format-discharging": "{capacity}% {icon}",
     "format-charging": "{capacity}% {icon}",
-    "format-plugged": "{power}",
+    "format-plugged": "",
     "format-icons": {
       "charging": [
         "󰢜",
