--- a/config/V6.f/config.jsonc
+++ b/config/V6.f/config.jsonc
@@ -240,7 +240,7 @@
     "on-click": "omarchy-launch-wifi"
   },
   "battery": {
-    "format": " {capacity}% {icon}",
+    "format": "{capacity}% {icon}",
     "format-discharging": "{capacity}% {icon}",
     "format-charging": "{capacity}% {icon}",
     "format-plugged": "",
