--- a/config/V6.fa/config.jsonc
+++ b/config/V6.fa/config.jsonc
@@ -76,7 +76,7 @@
 
 "hyprland/workspaces": {
 	"disable-scroll": true,
-	"all-outputs": true,
+	"all-outputs": false,
 	"warp-on-scroll": false,
 	"sort-by-number": true,
 	"show-special": false,
