--- a/config/V6.fa/config.jsonc
+++ b/config/V6.fa/config.jsonc
@@ -81,6 +81,7 @@
 	"format-window-separator": " ",
 	"window-rewrite-default": "",
 	"window-rewrite": {		
+        "class<.*imv*.>": " ",
 		"title<.*amazon.*>": "",
 		"class<firefox|org.mozilla.firefox|librewolf|floorp|mercury-browser|[Cc]achy-browser>": "",
 		"class<zen>": "󰰷",
