--- a/config/V1.5/config.jsonc
+++ b/config/V1.5/config.jsonc
@@ -15,6 +15,7 @@
   ],
   "modules-center": [
     "clock",
+    "custom/voxtype",
     "custom/weather",
     "custom/screenrecording-indicator",
     "custom/update",
@@ -107,7 +108,7 @@
     "on-click": "omarchy-launch-floating-terminal-with-presentation omarchy-update",
     "tooltip-format": "Omarchy update available",
     "signal": 7,
-    "interval": 3600
+    "interval": 21600
   },
   "custom/updatespacman": {
     "format": "{}{icon}",
@@ -118,6 +119,19 @@
     },
     "exec-if": "which waybar-module-pacman-updates",
     "exec": "waybar-module-pacman-updates --no-zero-output"
+  },
+  "custom/voxtype": {
+    "exec": "omarchy-voxtype-status",
+    "return-type": "json",
+    "format": "{icon}",
+    "format-icons": {
+      "idle": "",
+      "recording": "󰍬",
+      "transcribing": "󰔟"
+    },
+    "tooltip": true,
+    "on-click-right": "omarchy-voxtype-config",
+    "on-click": "omarchy-voxtype-model"
   },
   "cpu": {
     "interval": 2,
