--- a/config/V2.1/config.jsonc
+++ b/config/V2.1/config.jsonc
@@ -11,7 +11,7 @@
  
   "group/left1": {
     "orientation": "inherit",
-    "modules": ["custom/omarchy", "clock", "custom/weather"]
+    "modules": ["custom/omarchy", "clock", "custom/voxtype", "custom/weather"]
    },
 
   "group/left2": {
@@ -86,6 +86,19 @@
     "tooltip-format": "Omarchy update available",
     "signal": 7,
     "interval": 21600
+  },
+  "custom/voxtype": {
+    "exec": "omarchy-voxtype-status",
+    "return-type": "json",
+    "format": "{icon}",
+    "format-icons": {
+      "idle": "",
+      "recording": "󰍬",
+      "transcribing": "󰔟"
+    },
+    "tooltip": true,
+    "on-click-right": "omarchy-voxtype-config",
+    "on-click": "omarchy-voxtype-model"
   },
    "custom/updatespacman": {
     "format": "{}{icon}",
@@ -281,8 +294,8 @@
     },
     "status-icons": {
       "paused": "󰋐"  
-    }
-    // "ignored-players": ["firefox"]
+    },
+    "ignored-players": ["firefox", "chromium", "brave"]
   },
   "custom/screenrecording-indicator": {
     "on-click": "omarchy-cmd-screenrecord",
