--- a/config/V2.7b/config.jsonc
+++ b/config/V2.7b/config.jsonc
@@ -10,6 +10,7 @@
      "mpris",
       "custom/omarchy",  
       "clock",
+      "custom/voxtype",
       "custom/weather",
       "battery",
       "idle_inhibitor",
@@ -63,6 +64,19 @@
     "tooltip-format": "Omarchy update available",
     "signal": 7,
     "interval": 21600
+  },
+  "custom/voxtype": {
+    "exec": "omarchy-voxtype-status",
+    "return-type": "json",
+    "format": "{icon}",
+    "format-icons": {
+      "idle": "",
+      "recording": "󰍬",
+      "transcribing": "󰔟"
+    },
+    "tooltip": true,
+    "on-click-right": "omarchy-voxtype-config",
+    "on-click": "omarchy-voxtype-model"
   },
    "custom/updatespacman": {
     "format": "{}{icon}",
