--- a/config/V4/config.jsonc
+++ b/config/V4/config.jsonc
@@ -1,6 +1,5 @@
 {
   "reload_style_on_change": true,
-  "layer": "top",
   "position": "top",
   "spacing": 0,
   "height": 32,
@@ -13,6 +12,7 @@
   ],
   "modules-center": [
     "clock",
+    "custom/voxtype",
     "idle_inhibitor",
     "custom/update",
     "custom/screenrecording-indicator"
@@ -73,6 +73,19 @@
       "(.*imv)...(.*).. (.*)": "  $2 ",
       "(.*) - com.obsproject.Studio": "  $1 "
     }
+  },
+    "custom/voxtype": {
+    "exec": "omarchy-voxtype-status",
+    "return-type": "json",
+    "format": "{icon}",
+    "format-icons": {
+      "idle": "",
+      "recording": "󰍬",
+      "transcribing": "󰔟"
+    },
+    "tooltip": true,
+    "on-click-right": "omarchy-voxtype-config",
+    "on-click": "omarchy-voxtype-model"
   },
   "custom/omarchy": {
     "format": "<span font='omarchy'>\ue900</span>",
