Update custom/update format in config.jsonc

--- a/config/V3.3/config.jsonc
+++ b/config/V3.3/config.jsonc
@@ -105,8 +105,8 @@
     "on-click-right": "omarchy-voxtype-config",
     "on-click": "omarchy-voxtype-model"
   },
-  "custom/update": {
-    "format": "<span weight='bold' >\ue900</span>",
+    "custom/update": {
+    "format": "",
     "exec": "omarchy-update-available",
     "on-click": "omarchy-launch-floating-terminal-with-presentation omarchy-update",
     "tooltip-format": "Omarchy update available",
