--- a/config/V3.4/config.jsonc
+++ b/config/V3.4/config.jsonc
@@ -85,7 +85,7 @@
     "tooltip-format": "Omarchy Menu\n\nSuper + Alt + Space"
   },
   "custom/update": {
-    "format": "<span weight='bold' >\ue900</span>",
+    "format": "",
     "exec": "omarchy-update-available",
     "on-click": "omarchy-launch-floating-terminal-with-presentation omarchy-update",
     "tooltip-format": "Omarchy update available",
