--- a/config/V5.b/config.jsonc
+++ b/config/V5.b/config.jsonc
@@ -96,8 +96,8 @@
     },
     "ignored-players": ["firefox", "chromium", "brave"]
   },
-  "custom/update": {
-    "format": "<span weight='bold' >\ue900</span>",
+   "custom/update": {
+    "format": "",
     "exec": "omarchy-update-available",
     "on-click": "omarchy-launch-floating-terminal-with-presentation omarchy-update",
     "tooltip-format": "Omarchy update available",
