--- a/config/V5.e/config.jsonc
+++ b/config/V5.e/config.jsonc
@@ -109,7 +109,7 @@
     "ignored-players": ["firefox", "chromium", "brave"]
   },
   "custom/update": {
-    "format": "<span weight='bold' >\ue900</span>",
+    "format": "",
     "exec": "omarchy-update-available",
     "on-click": "omarchy-launch-floating-terminal-with-presentation omarchy-update",
     "tooltip-format": "Omarchy update available",
