--- a/config/V6.fa/config.jsonc
+++ b/config/V6.fa/config.jsonc
@@ -349,8 +349,8 @@
     },
     "status-icons": {
       "paused": "󰋐"  
-    }
-    // "ignored-players": ["firefox"]
+    },
+    "ignored-players": ["firefox", "chromium", "brave"]
   },
   "custom/updatespacman": {
     "format": "{}{icon}",
