--- a/config/V6.ca/config.jsonc
+++ b/config/V6.ca/config.jsonc
@@ -172,7 +172,7 @@
     "format": "{capacity}% {icon}",
     "format-discharging": "{capacity}% {icon}",
     "format-charging": "{capacity}% {icon}",
-    "format-plugged": " {capacity}%",
+    "format-plugged": "",
     "format-icons": {
       "charging": [
         "󰢜",
