--- a/config/V2.5/config.jsonc
+++ b/config/V2.5/config.jsonc
@@ -100,11 +100,11 @@
     "format-alt": "{:%A, %d %B %Y - %H:%m}",
     "tooltip-format": "<span>{calendar}</span>",
     "calendar": {
-      "mode": "mouth",
+      "mode": "month",
       "mode-mon-col": 3,
       "on-click-right": "mode",
       "format": {
-        "mouth": "<span color='#ffead3'><b>{}</b></span>",
+        "month": "<span color='#ffead3'><b>{}</b></span>",
         "weekdays": "<span color='#ffcc66'><b>{}</b></span>",
         "today": "<span color='#ff6699'><b>{}</b></span>",
       },
