--- a/config/V2.7b/config.jsonc
+++ b/config/V2.7b/config.jsonc
@@ -127,7 +127,7 @@
     "format-alt": " {:%H:%M %D}",
     "tooltip-format": "<span>{calendar}</span>",
     "calendar": {
-      "mode": "mouth",
+      "mode": "month",
       "mode-mon-col": 3,
       "on-click-right": "mode",
       "format": {
