--- a/config/V6.f/config.jsonc
+++ b/config/V6.f/config.jsonc
@@ -218,7 +218,7 @@
     "format-alt": "{:L%d %B W%V %Y}",
     "tooltip-format": "<span>{calendar}</span>",
     "calendar": {
-      "mode": "mouth",
+      "mode": "month",
       "mode-mon-col": 3,
       "on-click-right": "mode",
       "format": {
